--- a/resources/state/state.css
+++ b/resources/state/state.css
@@ -90,11 +90,7 @@ hr {
   color: #2f4f4f;
 }
 .header h1 {
-  display: inline-block;
-  background-image: linear-gradient(271.14deg, #001bff 0.98%, #00f0ff 25.79%, #fce84a 47.33%, #f34628 65.77%, #b275ff 91.4%);
-  -webkit-background-clip: text;
-          background-clip: text;
-  color: transparent;
+  font-family: NZBZ;
 }
 
 .info {
