--- a/resources/state/state.css
+++ b/resources/state/state.css
@@ -94,7 +94,7 @@ hr {
 }
 .header h1 {
   display: inline-block;
-  background: linear-gradient(135deg, #5ce2e2, #a985f7); /* 蓝紫渐变 */
+  background: linear-gradient(135deg, #5ce2e2, #ea85f7); /* 蓝紫渐变 */
   -webkit-background-clip: text; /* WebKit 浏览器支持的属性 */
   background-clip: text; /* 设置背景只在文字上显示 */
   color: transparent; /* 让文字透明 */
